<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="HomeActivityBinding">
        <variable
            name="employee_name"
            type="String" />
        <variable
            name="company_name"
            type="String" />
        <variable
            name="notification_filter_id"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/employee_name"
            app:hintTextColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/input_layout_company_name"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@{employee_name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            app:hintTextColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/input_layout_filter_id"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/input_layout_employee_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@{company_name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_filter_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/notification_filter_id"
            app:hintTextColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/input_layout_company_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@{notification_filter_id}"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
