<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LoginActivityBinding">

        <variable
            name="listener"
            type="com.harry.example.logintask.ui.LoginActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.LoginActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/login_avataar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/login_avataar"
                    app:layout_constraintBottom_toTopOf="@id/input_layout_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/username"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/errorColor"
                    app:layout_constraintBottom_toBottomOf="@id/input_layout_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_avataar"
                    app:startIconDrawable="@drawable/mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:layout_constraintBottom_toTopOf="@+id/password"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/errorColor"
                    app:layout_constraintBottom_toTopOf="@id/remember_me"
                    app:layout_constraintEnd_toEndOf="@id/input_layout_username"
                    app:layout_constraintStart_toStartOf="@id/input_layout_username"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_username"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintTop_toBottomOf="@+id/username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    app:layout_constraintStart_toStartOf="@id/input_layout_password"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/arimo_bold"
                    android:onClick="@{()->listener.loginUser()}"
                    android:text="@string/login"
                    android:textSize="15sp"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/login_progress"
                    app:layout_constraintEnd_toEndOf="@id/input_layout_password"
                    app:layout_constraintStart_toStartOf="@id/input_layout_password"
                    app:layout_constraintTop_toBottomOf="@+id/remember_me" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="input_layout_username,input_layout_password,login" />

                <ProgressBar
                    android:id="@+id/login_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/input_layout_password"
                    app:layout_constraintStart_toStartOf="@id/input_layout_password"
                    app:layout_constraintTop_toBottomOf="@id/login" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
